# genai

./: .gitignore  README.md  app.py  config.py  dataset.py  eda.ipynb  model.py  pyproject.toml  train.py  upload.py  utils.py
models/: conformer.py  effnet.py  scratch.py
src/: config.py  dataset.py  train.py  utils.py
src/models/: conformer.py  effnet.py  scratch.py
