[project]
name = "dlgenai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ffmpeg>=1.4",
    "ipykernel>=7.2.0",
    "kagglehub>=1.0.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "pytorch-lightning>=2.6.1",
    "streamlit>=1.56.0",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchcodec>=0.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.3.0",
    "wandb>=0.25.1",
]
